[package]
name = "colosseum-client"
version = "0.1.0"
authors = ["Chay Nabors <chaynabors@gmail.com>"]
edition = "2018"

[dependencies]
bytes = "0.6.0"
colosseum = { package = "colosseum-core", path = "../colosseum-core" }
either = "1.6.1"
gilrs = "0.8.0"
replace_with = "0.1.7"
tokio = { version = "0.3.5", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
winit = "0.23.0"
